--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-login-app",
   "version": "0.1.0",
+  "homepage": "https://test-frontend-2uih.onrender.com",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
