--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_URL=http://localhost:8080
-REACT_APP_API_URL=https://springboot-app-afro.onrender.com
+REACT_APP_API_URL=http://localhost:8080
+# REACT_APP_API_URL=https://springboot-app-afro.onrender.com
